feat: add server-side sortable keyset pagination
